--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script src="/css/style.css"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>uyku.app</title>
+</head>
+<body>
+    Hoş Geldiniz!
+</body>
+</html>
