--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link type="text/css" rel="stylesheet" href="https//uykuda.github.io/css/style.css" />
+    <link rel="stylesheet" href="https//uykuda.github.io/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uyku.app</title>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <div class="logo" id="brand">uyku</div>
+    <div class="text">welcome to my portfolio.</div>
+    <div class="buttons">
+        <a href="" class="button jat">
+            <div class="button-icon jat"><i class="fa-brands fa-youtube"></i></div>
+            <div class="button-text">YouTube</div>
+
+        </a>
+        <a href="" class="button jat">
+            <div class="button-icon jat"><i class="fa-brands fa-discord"></i></div>
+            <div class="button-text">Discord</div>
+        </a>
+        <a href="https://github.com/uykuda" class="button jat">
+
+            <div class="button-icon jat"><i class="fa-brands fa-github"></i></div>
+            <div class="button-text">GitHub</div>
+        </a>
+    </div>
 </body>
 </html>
