--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="button-text">YouTube</div>
 
         </a>
-        <a href="" class="button jat">
+        <a href="https://discord.com/invite/4fV3kyU8" class="button jat">
             <div class="button-icon jat"><i class="fa-brands fa-discord"></i></div>
             <div class="button-text">Discord</div>
         </a>
